--- a/src/Plugin/FilterDropdown/FilterDropdown.scss
+++ b/src/Plugin/FilterDropdown/FilterDropdown.scss
@@ -1,15 +1,17 @@
 @use '../variables' as *;
 
 .button {
-	height: 32px;
+	min-height: 32px;
     min-width: 96px;
 	border: 1px solid $accent-color;
 	border-radius: 16px;
 	background-color: white;
 	color: $accent-color;
+	padding: 4px;
     padding-left: 16px;
 	padding-right: 34px;
     font-size: 12px;
+    line-height: 16px;
     text-align: left;
     text-transform: uppercase;
 	background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%2381d742' stroke-width='3' d='M2 5l6 6 6-6'/%3e%3c/svg%3e");
@@ -24,6 +26,13 @@
 		color: white;
 		background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='white' stroke-width='3' d='M2 5l6 6 6-6'/%3e%3c/svg%3e");
 	}
+}
+
+.mobile-layout .button {
+    padding-left: 12px;
+	padding-right: 30px;
+	background-position: right 12px center;
+    text-align: center;
 }
 
 .relative {
