--- a/src/Plugin/Group/Group.scss
+++ b/src/Plugin/Group/Group.scss
@@ -1,3 +1,5 @@
+@use '../variables' as *;
+
 .group {
 	padding: 12px;
 	background-color: white;
@@ -17,7 +19,12 @@
 	.meeting-mode {
 		text-transform: uppercase;
 		font-size: 12px;
-		color: #777;
+		text-align: right;
+		color: $gray;
+
+		span {
+			white-space: nowrap;
+		}
 	}
 
 	h2 {
@@ -28,7 +35,7 @@
 }
 
 .highlighted .group {
-	background-color: #176fb2;
+	background-color: $primary-color;
 	color: white;
 
 	.meeting-mode {
