--- a/src/Plugin/InfoWindow/InfoWindow.scss
+++ b/src/Plugin/InfoWindow/InfoWindow.scss
@@ -1,3 +1,5 @@
+@use '../variables' as *;
+
 .gm-style-iw-t::after {
 	display: none;
 }
@@ -30,7 +32,7 @@
 	.meeting-mode {
 		text-transform: uppercase;
 		font-size: 12px;
-		color: #777;
+		color: $gray;
 	}
 
 	p {
